--- a/index.html
+++ b/index.html
@@ -3,37 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecutronIT - Your Security Partner</title>
+    <title>SecutronIT - Cybersecurity Experts</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+    <!-- Navigation Bar -->
     <header>
-        <h1>Welcome to SecutronIT</h1>
-        <p>Your trusted cybersecurity solutions provider.</p>
+        <h1>SecutronIT</h1>
         <nav>
             <ul>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
+    <!-- Hero Section -->
+    <section id="home">
+        <h2>Protecting Your Business with Cutting-Edge Cybersecurity</h2>
+        <p>Your trusted partner in security and IT solutions.</p>
+        <a href="#contact" class="cta-button">Get a Free Consultation</a>
+    </section>
+
+    <!-- Services Section -->
     <section id="services">
         <h2>Our Services</h2>
-        <ul>
-            <li>Penetration Testing</li>
-            <li>Cloud Security</li>
-            <li>Incident Response</li>
-        </ul>
+        <div class="service-container">
+            <div class="service">
+                <h3>Penetration Testing</h3>
+                <p>We identify security weaknesses before hackers do.</p>
+            </div>
+            <div class="service">
+                <h3>Cloud Security</h3>
+                <p>Protect your cloud infrastructure with our expert solutions.</p>
+            </div>
+            <div class="service">
+                <h3>Incident Response</h3>
+                <p>Rapid response to security threats and breaches.</p>
+            </div>
+        </div>
     </section>
 
+    <!-- About Us Section -->
     <section id="about">
         <h2>About Us</h2>
-        <p>SecutronIT is dedicated to providing top-notch cybersecurity services.</p>
+        <p>At SecutronIT, we specialize in providing top-tier cybersecurity services. With years of expertise, our team ensures the highest level of security for your business.</p>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Us</h2>
         <form id="contactForm">
@@ -44,6 +64,7 @@
         </form>
     </section>
 
+    <!-- Footer -->
     <footer>
         <p>© 2025 SecutronIT. All Rights Reserved.</p>
     </footer>
