--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- Hero Section -->
     <section id="home">
+        <img src="assets/images/banner.jpg" alt="Cybersecurity Banner" class="hero-image">
         <h2>Protecting Your Business with Cutting-Edge Cybersecurity</h2>
         <p>Your trusted partner in security and IT solutions.</p>
         <a href="#contact" class="cta-button">Get a Free Consultation</a>
@@ -33,14 +34,17 @@
         <h2>Our Services</h2>
         <div class="service-container">
             <div class="service">
+                <img src="assets/images/service1.jpg" alt="Penetration Testing">
                 <h3>Penetration Testing</h3>
                 <p>We identify security weaknesses before hackers do.</p>
             </div>
             <div class="service">
+                <img src="assets/images/service2.jpg" alt="Cloud Security">
                 <h3>Cloud Security</h3>
                 <p>Protect your cloud infrastructure with our expert solutions.</p>
             </div>
             <div class="service">
+                <img src="assets/images/service3.jpg" alt="Incident Response">
                 <h3>Incident Response</h3>
                 <p>Rapid response to security threats and breaches.</p>
             </div>
@@ -50,12 +54,14 @@
     <!-- About Us Section -->
     <section id="about">
         <h2>About Us</h2>
+        <img src="assets/images/about.jpg" alt="About SecutronIT" class="section-image">
         <p>At SecutronIT, we specialize in providing top-tier cybersecurity services. With years of expertise, our team ensures the highest level of security for your business.</p>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Us</h2>
+        <img src="assets/images/contact.jpg" alt="Contact Us" class="section-image">
         <form id="contactForm">
             <input type="text" id="name" placeholder="Your Name" required>
             <input type="email" id="email" placeholder="Your Email" required>
