--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Hero Section -->
     <section id="home">
-        <img src="assets/images/banner.jpg" alt="Cybersecurity Banner" class="hero-image">
+        <img src="banner.jpg" alt="Cybersecurity Banner" class="hero-image">
         <h2>Protecting Your Business with Cutting-Edge Cybersecurity</h2>
         <p>Your trusted partner in security and IT solutions.</p>
         <a href="#contact" class="cta-button">Get a Free Consultation</a>
