--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>Our Services</h2>
         <div class="service-container">
             <div class="service">
-                <img src="PT.JPG" alt="Penetration Testing">
+                <img src="PT.jpg" alt="Penetration Testing">
                 <h3>Penetration Testing</h3>
                 <p>We identify security weaknesses before hackers do.</p>
             </div>
