--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <h2>Our Services</h2>
         <div class="service-container">
             <div class="service">
-                <img src="PT.jpg" alt="Penetration Testing">
-                <h3>Penetration Testing</h3>
+                <img src="PT.jpg" alt="Cyber Security">
+                <h3>Cyber Security</h3>
                 <p>We identify security weaknesses before hackers do.</p>
             </div>
             <div class="service">
@@ -44,8 +44,8 @@
                 <p>Protect your cloud infrastructure with our expert solutions.</p>
             </div>
             <div class="service">
-                <img src="assets/images/service3.jpg" alt="Incident Response">
-                <h3>Incident Response</h3>
+                <img src="assets/images/service3.jpg" alt="Identity and Access Management">
+                <h3>Identity and Access Management</h3>
                 <p>Rapid response to security threats and breaches.</p>
             </div>
         </div>
