--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         <h2>Our Services</h2>
         <div class="service-container">
             <div class="service">
-                <img src="PT.jpg" alt="Cyber Security">
+                <img src="NS.jpg" alt="Cyber Security">
                 <h3>Cyber Security</h3>
                 <p>We identify security weaknesses before hackers do.</p>
             </div>
             <div class="service">
-                <img src="assets/images/service2.jpg" alt="Cloud Security">
+                <img src="CS.jpg" alt="Cloud Security">
                 <h3>Cloud Security</h3>
                 <p>Protect your cloud infrastructure with our expert solutions.</p>
             </div>
             <div class="service">
-                <img src="assets/images/service3.jpg" alt="Identity and Access Management">
+                <img src="IAM.jpg" alt="Identity and Access Management">
                 <h3>Identity and Access Management</h3>
                 <p>Rapid response to security threats and breaches.</p>
             </div>
