--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Hero Section -->
     <section id="home">
-        <img src="banner.jpg" alt="Cybersecurity Banner" class="hero-image">
+        <img src="assets/images/banner.jpg" alt="Cybersecurity Banner" class="hero-image">
         <h2>Protecting Your Business with Cutting-Edge Cybersecurity</h2>
         <p>Your trusted partner in security and IT solutions.</p>
         <a href="#contact" class="cta-button">Get a Free Consultation</a>
@@ -34,17 +34,17 @@
         <h2>Our Services</h2>
         <div class="service-container">
             <div class="service">
-                <img src="NS.jpg" alt="Cyber Security">
+                <img src="assets/images/NS.jpg" alt="Cyber Security">
                 <h3>Cyber Security</h3>
                 <p>We identify security weaknesses before hackers do.</p>
             </div>
             <div class="service">
-                <img src="CS.jpg" alt="Cloud Security">
+                <img src="assets/images/CS.jpg" alt="Cloud Security">
                 <h3>Cloud Security</h3>
                 <p>Protect your cloud infrastructure with our expert solutions.</p>
             </div>
             <div class="service">
-                <img src="IAM.jpg" alt="Identity and Access Management">
+                <img src="assets/images/IAM.jpg" alt="Identity and Access Management">
                 <h3>Identity and Access Management</h3>
                 <p>Rapid response to security threats and breaches.</p>
             </div>
