--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li> <!-- Linked to contact.html -->
             </ul>
         </nav>
     </header>
@@ -26,7 +26,7 @@
         <img src="assets/images/banner.jpg" alt="Cybersecurity Banner" class="hero-image">
         <h2>Protecting Your Business with Cutting-Edge Cybersecurity</h2>
         <p>Your trusted partner in security and IT solutions.</p>
-        <a href="#contact" class="cta-button">Get a Free Consultation</a>
+        <a href="contact.html" class="cta-button">Get a Free Consultation</a> <!-- Linked to contact.html -->
     </section>
 
     <!-- Services Section -->
@@ -58,16 +58,11 @@
         <p>At SecutronIT, we specialize in providing top-tier cybersecurity services. With years of expertise, our team ensures the highest level of security for your business.</p>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Contact Section (Now Separate in contact.html) -->
     <section id="contact">
         <h2>Contact Us</h2>
         <img src="assets/images/contact.jpg" alt="Contact Us" class="section-image">
-        <form id="contactForm">
-            <input type="text" id="name" placeholder="Your Name" required>
-            <input type="email" id="email" placeholder="Your Email" required>
-            <textarea id="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
+        <p><a href="contact.html" class="cta-button">Visit Our Contact Page</a></p> <!-- Linked to contact.html -->
     </section>
 
     <!-- Footer -->
