--- a/assets/contact/contact.html
+++ b/assets/contact/contact.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - SecutronIT</title>
+    <link rel="stylesheet" href="assets/contact/styles.css">
+    <script defer src="assets/contact/script.js"></script>
+</head>
+<body>
 
+    <header>
+        <h1>Contact Us</h1>
+    </header>
+
+    <section class="contact-container">
+        <div class="contact-info">
+            <h2>📍 Address</h2>
+            <p>SecutronIT Solutions</p>
+            <p>Toronto, Ontario</p>
+            <p>Canada</p>
+
+            <h2>📞 Phone</h2>
+            <p>📱 +1 647 563 5424</p>
+
+            <h2>💬 WhatsApp</h2>
+            <p>
+                <a href="https://wa.me/16475635424" target="_blank">
+                    <img src="assets/images/whatsapp-icon.png" alt="WhatsApp"> Chat with us
+                </a>
+            </p>
+
+            <h2>📧 Email</h2>
+            <p><a href="mailto:info@secutronit.com">info@secutronit.com</a></p>
+
+            <h2>🕒 Business Hours</h2>
+            <p>🕘 Monday - Friday: 9:00 AM - 6:00 PM</p>
+            <p>🕘 Saturday: 10:00 AM - 4:00 PM</p>
+            <p>🚫 Sunday: Closed</p>
+        </div>
+
+        <div class="map-container">
+            <h2>📍 Find Us on Google Maps</h2>
+            <iframe 
+                src="https://www.google.com/maps/embed/v1/place?key=YOUR_GOOGLE_MAPS_API_KEY&q=Riyadh,Saudi+Arabia"
+                allowfullscreen>
+            </iframe>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2025 SecutronIT. All Rights Reserved.</p>
+    </footer>
+
+</body>
+</html>
