--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - SecutronIT</title>
-    <link rel="stylesheet" href="assets/styles.css">
-    <script defer src="assets/script.js"></script>
+    <link rel="stylesheet" href="assets/contact/styles.css">
+    <script defer src="assets/contact/script.js"></script>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
             <h2>💬 WhatsApp</h2>
             <p>
                 <a href="https://wa.me/16475635424" target="_blank">
-                    <img src="assets/whatsapp-icon.png" alt="WhatsApp"> Chat with us
+                    <img src="assets/images/whatsapp-icon.png" alt="WhatsApp"> Chat with us
                 </a>
             </p>
 
@@ -54,4 +54,3 @@
 
 </body>
 </html>
-
