--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecutronIT - Cybersecurity Experts</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/index/style.css">
 </head>
 <body>
 
@@ -70,6 +70,6 @@
         <p>© 2025 SecutronIT. All Rights Reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="assets/index/script.js"></script>
 </body>
 </html>
