--- a/index.html
+++ b/index.html
@@ -9,46 +9,30 @@
 <body>
 
     <!-- Navigation Bar -->
-    <header>
-        <h1>SecutronIT</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="contact.html">Contact</a></li> <!-- Linked to contact.html -->
-            </ul>
-        </nav>
-    </header>
-
+<header>
+    <h1>SecutronIT</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="services.html">Services</a></li> 
+            <li><a href="#about">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
     <!-- Hero Section -->
     <section id="home">
         <img src="assets/images/banner.jpg" alt="Cybersecurity Banner" class="hero-image">
         <h2>Protecting Your Business with Cutting-Edge Cybersecurity</h2>
         <p>Your trusted partner in security and IT solutions.</p>
-        <a href="contact.html" class="cta-button">Get a Free Consultation</a> <!-- Linked to contact.html -->
+        <a href="contact.html" class="cta-button">Get a Free Consultation</a> 
     </section>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="contact">
         <h2>Our Services</h2>
-        <div class="service-container">
-            <div class="service">
-                <img src="assets/images/NS.jpg" alt="Cyber Security">
-                <h3>Cyber Security</h3>
-                <p>We identify security weaknesses before hackers do.</p>
-            </div>
-            <div class="service">
-                <img src="assets/images/CS.jpg" alt="Cloud Security">
-                <h3>Cloud Security</h3>
-                <p>Protect your cloud infrastructure with our expert solutions.</p>
-            </div>
-            <div class="service">
-                <img src="assets/images/IAM.jpg" alt="Identity and Access Management">
-                <h3>Identity and Access Management</h3>
-                <p>Rapid response to security threats and breaches.</p>
-            </div>
-        </div>
+        <img src="assets/images/contact.jpg" alt="Our Services" class="section-image">
+        <p><a href="services.html" class="cta-button">Visit Our Services Page</a></p> 
     </section>
 
     <!-- About Us Section -->
@@ -58,11 +42,11 @@
         <p>At SecutronIT, we specialize in providing top-tier cybersecurity services. With years of expertise, our team ensures the highest level of security for your business.</p>
     </section>
 
-    <!-- Contact Section (Now Separate in contact.html) -->
+    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Us</h2>
         <img src="assets/images/contact.jpg" alt="Contact Us" class="section-image">
-        <p><a href="contact.html" class="cta-button">Visit Our Contact Page</a></p> <!-- Linked to contact.html -->
+        <p><a href="contact.html" class="cta-button">Visit Our Contact Page</a></p> 
     </section>
 
     <!-- Footer -->
