--- a/index.html
+++ b/index.html
@@ -3,50 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecutronIT - Cybersecurity Experts</title>
-    <link rel="stylesheet" href="assets/index/style.css">
+    <title>SecutronIT - Cybersecurity & IT Solutions</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
     <!-- Navigation Bar -->
-<header>
-    <h1>SecutronIT</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li> 
-            <li><a href="#about">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <h1>SecutronIT</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <!-- Hero Section -->
-    <section id="home">
-        <img src="assets/images/banner.jpg" alt="Cybersecurity Banner" class="hero-image">
-        <h2>Protecting Your Business with Cutting-Edge Cybersecurity</h2>
-        <p>Your trusted partner in security and IT solutions.</p>
-        <a href="contact.html" class="cta-button">Get a Free Consultation</a> 
-    </section>
-
-    <!-- Services Section -->
-    <section id="contact">
-        <h2>Our Services</h2>
-        <img src="assets/images/contact.jpg" alt="Our Services" class="section-image">
-        <p><a href="services.html" class="cta-button">Visit Our Services Page</a></p> 
-    </section>
-
-    <!-- About Us Section -->
-    <section id="about">
-        <h2>About Us</h2>
-        <img src="assets/images/about.jpg" alt="About SecutronIT" class="section-image">
-        <p>At SecutronIT, we specialize in providing top-tier cybersecurity services. With years of expertise, our team ensures the highest level of security for your business.</p>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <img src="assets/images/contact.jpg" alt="Contact Us" class="section-image">
-        <p><a href="contact.html" class="cta-button">Visit Our Contact Page</a></p> 
+    <section id="hero">
+        <h2>Your Trusted Cybersecurity & IT Partner</h2>
+        <p>Securing businesses with cutting-edge solutions in Network Security, Cloud Security, and Microsoft Identity & Access Management.</p>
+        <a href="contact.html" class="cta-button">Get a Free Consultation</a>
     </section>
 
     <!-- Footer -->
@@ -54,6 +33,5 @@
         <p>© 2025 SecutronIT. All Rights Reserved.</p>
     </footer>
 
-    <script src="assets/index/script.js"></script>
 </body>
 </html>
