--- a/services.html
+++ b/services.html
@@ -3,81 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services - SecutronIT</title>
-    <link rel="stylesheet" href="style.css">
+    <title>SecutronIT Services</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <!-- Navigation Bar -->
     <header>
         <h1>SecutronIT</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Services Section -->
     <section id="services">
         <h2>Our Services</h2>
-
-        <!-- Network Security -->
-        <div class="service">
-            <img src="assets/images/network-security.jpg" alt="Network Security">
-            <h3>Network Security</h3>
-            <p>We provide top-notch security solutions from industry leaders like:</p>
-            <ul>
-                <li>Palo Alto Networks</li>
-                <li>Palo Alto SASE</li>
-                <li>Cisco</li>
-                <li>Fortinet</li>
-                <li>Barracuda</li>
-                <li>SonicWALL</li>
-            </ul>
-        </div>
-
-        <!-- Cloud Security -->
-        <div class="service">
-            <img src="assets/images/cloud-security.jpg" alt="Cloud Security">
-            <h3>Cloud Security</h3>
-            <p>Secure your cloud infrastructure with our expert solutions for:</p>
-            <ul>
-                <li>Oracle Cloud Infrastructure (OCI)</li>
-                <li>Microsoft Azure</li>
-            </ul>
-        </div>
-
-        <!-- Microsoft Entra ID -->
-        <div class="service">
-            <img src="assets/images/entra-id.jpg" alt="Microsoft Entra ID">
-            <h3>Microsoft Entra ID</h3>
-            <p>We help businesses implement secure identity and access management with Microsoft Entra ID.</p>
-        </div>
-
-        <!-- Microsoft Security -->
-        <div class="service">
-            <img src="assets/images/microsoft-security.jpg" alt="Microsoft Security">
-            <h3>Microsoft Security</h3>
-            <p>Enhance your business security with Microsoft's advanced threat protection, compliance, and security solutions.</p>
-        </div>
-
-        <!-- Microsoft Identity Governance -->
-        <div class="service">
-            <img src="assets/images/identity-governance.jpg" alt="Microsoft Identity Governance">
-            <h3>Microsoft Identity Governance</h3>
-            <p>Ensure proper user identity management and enforce security policies with Microsoft Identity Governance.</p>
+        <div class="service-container">
+            <div class="service">
+                <h3>Network Security</h3>
+                <p>We provide enterprise-level network security using Palo Alto, Cisco, Fortinet, and more.</p>
+            </div>
+            <div class="service">
+                <h3>Cloud Security</h3>
+                <p>Protect your cloud infrastructure with Oracle Cloud and Microsoft Azure security solutions.</p>
+            </div>
+            <div class="service">
+                <h3>Microsoft Security Solutions</h3>
+                <p>We specialize in Entra ID, Microsoft Purview, Identity Governance, and Endpoint Security.</p>
+            </div>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <p>© 2025 SecutronIT. All Rights Reserved.</p>
     </footer>
 
 </body>
 </html>
-
