--- a/contact.html
+++ b/contact.html
@@ -4,48 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - SecutronIT</title>
-    <link rel="stylesheet" href="assets/contact/styles.css">
-    <script defer src="assets/contact/script.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
     <header>
-        <h1>Contact Us</h1>
+        <h1>SecutronIT</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section class="contact-container">
-        <div class="contact-info">
-            <h2>📍 Address</h2>
-            <p>SecutronIT Solutions</p>
-            <p>Toronto, Ontario</p>
-            <p>Canada</p>
-
-            <h2>📞 Phone</h2>
-            <p>📱 +1 647 563 5424</p>
-
-            <h2>💬 WhatsApp</h2>
-            <p>
-                <a href="https://wa.me/16475635424" target="_blank">
-                    <img src="assets/images/whatsapp-icon.png" alt="WhatsApp"> Chat with us
-                </a>
-            </p>
-
-            <h2>📧 Email</h2>
-            <p><a href="mailto:info@secutronit.com">info@secutronit.com</a></p>
-
-            <h2>🕒 Business Hours</h2>
-            <p>🕘 Monday - Friday: 9:00 AM - 6:00 PM</p>
-            <p>🕘 Saturday: 10:00 AM - 4:00 PM</p>
-            <p>🚫 Sunday: Closed</p>
-        </div>
-
-        <div class="map-container">
-            <h2>📍 Find Us on Google Maps</h2>
-            <iframe 
-                src="https://www.google.com/maps/embed/v1/place?key=YOUR_GOOGLE_MAPS_API_KEY&q=Riyadh,Saudi+Arabia"
-                allowfullscreen>
-            </iframe>
-        </div>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
     </section>
 
     <footer>
