--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Hero Section -->
     <section id="hero">
-        <img src="assets/images/hero.jpg" alt="Cybersecurity Solutions">
+        <img src="assets/images/banner.jpg" alt="Cybersecurity Solutions">
         <h2>Your Trusted Cybersecurity & IT Partner</h2>
         <p>Securing businesses with cutting-edge solutions in Network Security, Cloud Security, and Microsoft Identity & Access Management.</p>
         <a href="contact.html" class="cta-button">Get a Free Consultation</a>
