--- a/services.html
+++ b/services.html
@@ -24,17 +24,17 @@
         <h2>Our Services</h2>
         <div class="service-container">
             <div class="service">
-                <img src="assets/images/network-security.jpg" alt="Network Security">
+                <img src="assets/images/NS.jpg" alt="Network Security">
                 <h3>Network Security</h3>
                 <p>We provide enterprise-level network security using Palo Alto, Cisco, Fortinet, and more.</p>
             </div>
             <div class="service">
-                <img src="assets/images/cloud-security.jpg" alt="Cloud Security">
+                <img src="assets/images/CS.jpg" alt="Cloud Security">
                 <h3>Cloud Security</h3>
                 <p>Protect your cloud infrastructure with Oracle Cloud and Microsoft Azure security solutions.</p>
             </div>
             <div class="service">
-                <img src="assets/images/microsoft-security.jpg" alt="Microsoft Security">
+                <img src="assets/images/IAM.jpg" alt="Microsoft Security">
                 <h3>Microsoft Security Solutions</h3>
                 <p>We specialize in Entra ID, Microsoft Purview, Identity Governance, and Endpoint Security.</p>
             </div>
