--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <!-- Navigation Bar -->
     <header>
-        <h1>Secutron IT</h1>
+         <div class="logo-container">
+        <img src="assets/images/SIT.png" alt="SecutronIT Logo" class="logo">
+        <h1>SecutronIT</h1>
+    </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
