--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation Bar -->
     <header>
          <div class="logo-container">
-        <img src="assets/images/SIT.png" alt="SecutronIT Logo" class="logo">
+        <img src="assets/images/SIT.jgp" alt="SecutronIT Logo" class="logo">
         <h1>Secutron IT</h1>
     </div>
         <nav>
