--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Navigation Bar -->
     <header>
          <div class="logo-container">
-        <img src="assets/images/SIT.jgp" alt="SecutronIT Logo" class="logo">
-        <h1>Secutron IT</h1>
+        <img src="assets/images/SIT.jgp" alt="Secutron IT Logo" class="logo">
+        <h1 class="company-name">SecutronIT</h1>
     </div>
         <nav>
             <ul>
