--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation Bar -->
     <header>
          <div class="logo-container">
-        <img src="assets/images/SIT.jgp" alt="Secutron IT Logo" class="logo">
+        <img src="assets/images/SIT.JPG" alt="Secutron IT Logo" class="logo">
         <h1 class="company-name">SecutronIT</h1>
     </div>
         <nav>
