--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecutronIT - IT Consultancy</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollreveal/4.0.5/scrollreveal.min.js"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -35,16 +36,19 @@
         <h2>Our Expertise</h2>
         <div class="services-grid">
             <div class="service">
+                <i class="fas fa-shield-alt"></i>
                 <h3>Network Security</h3>
-                <p>Protecting your network with advanced solutions from Palo Alto, Cisco, and Fortinet.</p>
+                <p>Advanced protection for your network from cyber threats.</p>
             </div>
             <div class="service">
+                <i class="fas fa-cloud"></i>
                 <h3>Cloud Security</h3>
-                <p>Securing cloud environments with Azure and Oracle Cloud solutions.</p>
+                <p>Secure your cloud infrastructure and applications.</p>
             </div>
             <div class="service">
+                <i class="fas fa-cogs"></i>
                 <h3>Microsoft Solutions</h3>
-                <p>Streamlining IT operations with Entra ID, Purview, and Identity Governance.</p>
+                <p>Efficient IT management using Entra ID, Purview, and Identity Governance.</p>
             </div>
         </div>
     </section>
@@ -52,10 +56,11 @@
     <!-- Industries Section -->
     <section id="industries">
         <h2>Industries We Serve</h2>
-        <p>Tailored IT solutions for various sectors including healthcare, finance, and education.</p>
+        <p>We offer customized IT solutions for various sectors.</p>
+        <!-- Dynamic Content for Industries -->
     </section>
 
-    <!-- Client Logos -->
+    <!-- Client Logos Section -->
     <section id="clients">
         <h2>Our Clients</h2>
         <div class="client-logos">
@@ -87,5 +92,6 @@
         <p>© 2025 SecutronIT. All Rights Reserved.</p>
     </footer>
 
+    <script src="scripts.js"></script>
 </body>
 </html>
