--- a/index.html
+++ b/index.html
@@ -1,97 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecutronIT - IT Consultancy</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollreveal/4.0.5/scrollreveal.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Secutron IT | Home</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <header>
-        <div class="logo">SecutronIT</div>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#industries">Industries</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <div class="container">
+      <a href="index.html" class="logo">Secutron IT</a>
+      <nav>
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Transforming IT Security for Tomorrow's Enterprises</h1>
-            <p>Innovative solutions in Network Security, Cloud Security, and Microsoft Solutions.</p>
-            <a href="#contact" class="btn">Get in Touch</a>
-        </div>
+  <main>
+    <section class="hero">
+      <h1>Empowering Secure Digital Transformation</h1>
+      <p>Leading IT Consultancy in Network Security, Cloud, and Microsoft Solutions</p>
+      <a href="contact.html" class="btn">Let’s Talk</a>
     </section>
+  </main>
 
-    <!-- Services Section -->
-    <section id="services">
-        <h2>Our Expertise</h2>
-        <div class="services-grid">
-            <div class="service">
-                <i class="fas fa-shield-alt"></i>
-                <h3>Network Security</h3>
-                <p>Advanced protection for your network from cyber threats.</p>
-            </div>
-            <div class="service">
-                <i class="fas fa-cloud"></i>
-                <h3>Cloud Security</h3>
-                <p>Secure your cloud infrastructure and applications.</p>
-            </div>
-            <div class="service">
-                <i class="fas fa-cogs"></i>
-                <h3>Microsoft Solutions</h3>
-                <p>Efficient IT management using Entra ID, Purview, and Identity Governance.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Industries Section -->
-    <section id="industries">
-        <h2>Industries We Serve</h2>
-        <p>We offer customized IT solutions for various sectors.</p>
-        <!-- Dynamic Content for Industries -->
-    </section>
-
-    <!-- Client Logos Section -->
-    <section id="clients">
-        <h2>Our Clients</h2>
-        <div class="client-logos">
-            <img src="client1.png" alt="Client 1">
-            <img src="client2.png" alt="Client 2">
-            <img src="client3.png" alt="Client 3">
-        </div>
-    </section>
-
-    <!-- About Us Section -->
-    <section id="about">
-        <h2>About SecutronIT</h2>
-        <p>We provide expert IT consultancy with a focus on security, cloud, and Microsoft solutions to help enterprises grow and protect their digital infrastructure.</p>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <form>
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 SecutronIT. All Rights Reserved.</p>
-    </footer>
-
-    <script src="scripts.js"></script>
+  <footer>
+    <p>© 2025 Secutron IT. All rights reserved.</p>
+  </footer>
 </body>
 </html>
